--- a/cogent3/apps.html
+++ b/cogent3/apps.html
@@ -227,80 +227,43 @@
 </div>
 </div>
 <div class="cell_output docutils container">
-<div class="output text_html"><style>
+<div class="output text_html">
+<div class="c3table">
+
+<style>
 .c3table table {margin: 10px 0;}
 .c3table tr:last-child {border-bottom: 1px solid #000;} 
-.c3table tr > th {text-align: center !important; padding: 0 5px;}
-.c3table tr > td {text-align: right !important; padding: 5px;}
-.c3table tr:nth-child(even) {background: #f7f7f7;}
-.c3table .index {background: rgba(161, 195, 209, 0.25); font-weight: 600;}
+.c3table tr > th {text-align: left; padding: 0 5px;}
+.c3table tr > td {text-align: left; padding: 5px;}
+.c3table tr:nth-child(even) {background: #f7f7f7 !important;}
+.c3table .ellipsis {background: rgba(0, 0, 0, .01);}
+.c3table .index {background: rgba(161, 195, 209, 0.0); margin: 10px; font-weight: 600;}
 .c3table .head_cell {background: rgba(161, 195, 209, 0.75); font-weight: bold; text-align: center;}
 .c3table caption {color: rgb(250, 250, 250); background: rgba(30, 140, 200, 1); padding: 3px; white-space: nowrap; caption-side: top;}
 .c3table .cell_title {font-weight: bold;}
+.c3col_left { text-align: left !important; display: block;}
+.c3col_right { text-align: right !important; display: block;}
+.c3col_center { text-align: center !important; display: block;}
 </style>
-<div class="c3table">
+
 <table>
+
 <thead class="head_cell">
-<th>module</th>
-<th>name</th>
-<th>composable</th>
-<th>doc</th>
-<th>inputs</th>
-<th>outputs</th>
-<th>data type</th>
+<th>module</th><th>name</th><th>composable</th><th>doc</th><th>inputs</th><th>outputs</th><th>data type</th>
 </thead>
 <tbody>
-<tr>
-<td>cogent3.app.align</td>
-<td>align_to_ref</td>
-<td>True</td>
-<td>Aligns to a reference seq, no gaps in the reference.
-    Returns an Alignment object.</td>
-<td>sequences</td>
-<td>aligned, serialisable</td>
-<td>SequenceCollection</td>
-</tr>
-<tr>
-<td>cogent3.app.align</td>
-<td>progressive_align</td>
-<td>True</td>
-<td>Progressive multiple sequence alignment via any cogent3 model.
-    Returns an Alignment object.</td>
-<td>sequences</td>
-<td>aligned, serialisable</td>
-<td>SequenceCollection</td>
-</tr>
-<tr>
-<td>cogent3.app.dist</td>
-<td>fast_slow_dist</td>
-<td>True</td>
-<td>Pairwise distance calculation for aligned sequences.
+<tr><td><span class="c3col_left">cogent3.app.align</span></td><td><span class="c3col_left">align_to_ref</span></td><td><span class="c3col_left">True</span></td><td><span class="c3col_left">Aligns to a reference seq, no gaps in the reference.
+    Returns an Alignment object.</span></td><td><span class="c3col_left">sequences</span></td><td><span class="c3col_left">aligned, serialisable</span></td><td><span class="c3col_left">SequenceCollection</span></td></tr>
+<tr><td><span class="c3col_left">cogent3.app.align</span></td><td><span class="c3col_left">progressive_align</span></td><td><span class="c3col_left">True</span></td><td><span class="c3col_left">Progressive multiple sequence alignment via any cogent3 model.
+    Returns an Alignment object.</span></td><td><span class="c3col_left">sequences</span></td><td><span class="c3col_left">aligned, serialisable</span></td><td><span class="c3col_left">SequenceCollection</span></td></tr>
+<tr><td><span class="c3col_left">cogent3.app.dist</span></td><td><span class="c3col_left">fast_slow_dist</span></td><td><span class="c3col_left">True</span></td><td><span class="c3col_left">Pairwise distance calculation for aligned sequences.
 
     Uses fast (but less numerically robust) approach where possible, slow (robust)
-    approach when not. Returns a DistanceMatrix.</td>
-<td>aligned</td>
-<td>pairwise_distances, serialisable</td>
-<td>ArrayAlignment, Alignment</td>
-</tr>
-<tr>
-<td>cogent3.app.evo</td>
-<td>ancestral_states</td>
-<td>True</td>
-<td>Computes ancestral state probabilities from a model result. Returns a dict
-    with a DictArray for each node.</td>
-<td>model_result</td>
-<td>result, tabular_result, serialisable</td>
-<td>model_result</td>
-</tr>
-<tr>
-<td>cogent3.app.evo</td>
-<td>bootstrap</td>
-<td>True</td>
-<td>Parametric bootstrap for a provided hypothesis. Returns a bootstrap_result.</td>
-<td>aligned</td>
-<td>result, bootstrap_result, serialisable</td>
-<td>ArrayAlignment, Alignment</td>
-</tr>
+    approach when not. Returns a DistanceMatrix.
+    </span></td><td><span class="c3col_left">aligned</span></td><td><span class="c3col_left">pairwise_distances, serialisable</span></td><td><span class="c3col_left">ArrayAlignment, Alignment</span></td></tr>
+<tr><td><span class="c3col_left">cogent3.app.evo</span></td><td><span class="c3col_left">ancestral_states</span></td><td><span class="c3col_left">True</span></td><td><span class="c3col_left">Computes ancestral state probabilities from a model result. Returns a dict
+    with a DictArray for each node.</span></td><td><span class="c3col_left">model_result</span></td><td><span class="c3col_left">result, tabular_result, serialisable</span></td><td><span class="c3col_left">model_result</span></td></tr>
+<tr><td><span class="c3col_left">cogent3.app.evo</span></td><td><span class="c3col_left">bootstrap</span></td><td><span class="c3col_left">True</span></td><td><span class="c3col_left">Parametric bootstrap for a provided hypothesis. Returns a bootstrap_result.</span></td><td><span class="c3col_left">aligned</span></td><td><span class="c3col_left">result, bootstrap_result, serialisable</span></td><td><span class="c3col_left">ArrayAlignment, Alignment</span></td></tr>
 </tbody>
 </table>
 <p>Top 5 rows from
