--- a/cogent3/genetic_codes.html
+++ b/cogent3/genetic_codes.html
@@ -220,93 +220,51 @@
 <p>Fundmental information encoding system and a fascinating subject of study. <code class="docutils literal notranslate"><span class="pre">cogent3</span></code> provides a dedicated object for handling genetic code information. The genetic codes included with <code class="docutils literal notranslate"><span class="pre">cogent3</span></code> are indicated in the following table indicates.</p>
 <div class="jupyter_cell docutils container">
 <div class="cell_output docutils container">
-<div class="output text_html"><style>
+<div class="output text_html">
+<div class="c3table">
+
+<style>
 .c3table table {margin: 10px 0;}
 .c3table tr:last-child {border-bottom: 1px solid #000;} 
-.c3table tr > th {text-align: center !important; padding: 0 5px;}
-.c3table tr > td {text-align: right !important; padding: 5px;}
-.c3table tr:nth-child(even) {background: #f7f7f7;}
-.c3table .index {background: rgba(161, 195, 209, 0.25); font-weight: 600;}
+.c3table tr > th {text-align: left; padding: 0 5px;}
+.c3table tr > td {text-align: left; padding: 5px;}
+.c3table tr:nth-child(even) {background: #f7f7f7 !important;}
+.c3table .ellipsis {background: rgba(0, 0, 0, .01);}
+.c3table .index {background: rgba(161, 195, 209, 0.25); margin: 10px; font-weight: 600;}
 .c3table .head_cell {background: rgba(161, 195, 209, 0.75); font-weight: bold; text-align: center;}
 .c3table caption {color: rgb(250, 250, 250); background: rgba(30, 140, 200, 1); padding: 3px; white-space: nowrap; caption-side: top;}
 .c3table .cell_title {font-weight: bold;}
+.c3col_left { text-align: left !important; display: block;}
+.c3col_right { text-align: right !important; display: block;}
+.c3col_center { text-align: center !important; display: block;}
 </style>
-<div class="c3table">
+
 <table>
-<caption><span class="cell_title">Specify a genetic code using either 'Name' or Code ID (as an integer or string)</span><br><span class="cell_legend"></span></caption>
+
+<caption>
+<br><span class="cell_title">Specify a genetic code using either 'Name' or Code ID (as an integer or string)</span></br>
+</caption>
 <thead class="head_cell">
-<th>Code ID</th>
-<th>Name</th>
+<th>Code ID</th><th>Name</th>
 </thead>
 <tbody>
-<tr>
-<td class="index">1</td>
-<td>Standard Nuclear</td>
-</tr>
-<tr>
-<td class="index">2</td>
-<td>Vertebrate Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">3</td>
-<td>Yeast Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">4</td>
-<td>Mold, Protozoan, and Coelenterate Mitochondrial, and Mycoplasma/Spiroplasma Nuclear</td>
-</tr>
-<tr>
-<td class="index">5</td>
-<td>Invertebrate Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">6</td>
-<td>Ciliate, Dasycladacean and Hexamita Nuclear</td>
-</tr>
-<tr>
-<td class="index">9</td>
-<td>Echinoderm and Flatworm Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">10</td>
-<td>Euplotid Nuclear</td>
-</tr>
-<tr>
-<td class="index">11</td>
-<td>Bacterial Nuclear and Plant Plastid</td>
-</tr>
-<tr>
-<td class="index">12</td>
-<td>Alternative Yeast Nuclear</td>
-</tr>
-<tr>
-<td class="index">13</td>
-<td>Ascidian Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">14</td>
-<td>Alternative Flatworm Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">15</td>
-<td>Blepharisma Nuclear</td>
-</tr>
-<tr>
-<td class="index">16</td>
-<td>Chlorophycean Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">20</td>
-<td>Trematode Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">22</td>
-<td>Scenedesmus obliquus Mitochondrial</td>
-</tr>
-<tr>
-<td class="index">23</td>
-<td>Thraustochytrium Mitochondrial</td>
-</tr>
+<tr><td class="index"><span class="c3col_right">1</span></td><td><span class="c3col_left">Standard Nuclear</span></td></tr>
+<tr><td class="index"><span class="c3col_right">2</span></td><td><span class="c3col_left">Vertebrate Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">3</span></td><td><span class="c3col_left">Yeast Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">4</span></td><td><span class="c3col_left">Mold, Protozoan, and Coelenterate Mitochondrial, and Mycoplasma/Spiroplasma Nuclear</span></td></tr>
+<tr><td class="index"><span class="c3col_right">5</span></td><td><span class="c3col_left">Invertebrate Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">6</span></td><td><span class="c3col_left">Ciliate, Dasycladacean and Hexamita Nuclear</span></td></tr>
+<tr><td class="index"><span class="c3col_right">9</span></td><td><span class="c3col_left">Echinoderm and Flatworm Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">10</span></td><td><span class="c3col_left">Euplotid Nuclear</span></td></tr>
+<tr><td class="index"><span class="c3col_right">11</span></td><td><span class="c3col_left">Bacterial Nuclear and Plant Plastid</span></td></tr>
+<tr><td class="index"><span class="c3col_right">12</span></td><td><span class="c3col_left">Alternative Yeast Nuclear</span></td></tr>
+<tr><td class="index"><span class="c3col_right">13</span></td><td><span class="c3col_left">Ascidian Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">14</span></td><td><span class="c3col_left">Alternative Flatworm Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">15</span></td><td><span class="c3col_left">Blepharisma Nuclear</span></td></tr>
+<tr><td class="index"><span class="c3col_right">16</span></td><td><span class="c3col_left">Chlorophycean Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">20</span></td><td><span class="c3col_left">Trematode Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">22</span></td><td><span class="c3col_left">Scenedesmus obliquus Mitochondrial</span></td></tr>
+<tr><td class="index"><span class="c3col_right">23</span></td><td><span class="c3col_left">Thraustochytrium Mitochondrial</span></td></tr>
 </tbody>
 </table>
 <p>
@@ -324,131 +282,55 @@
 </div>
 </div>
 <div class="cell_output docutils container">
-<div class="output text_html"><style>
+<div class="output text_html">
+<div class="c3table">
+
+<style>
 .c3table table {margin: 10px 0;}
 .c3table tr:last-child {border-bottom: 1px solid #000;} 
-.c3table tr > th {text-align: center !important; padding: 0 5px;}
-.c3table tr > td {text-align: right !important; padding: 5px;}
-.c3table tr:nth-child(even) {background: #f7f7f7;}
-.c3table .index {background: rgba(161, 195, 209, 0.25); font-weight: 600;}
+.c3table tr > th {text-align: left; padding: 0 5px;}
+.c3table tr > td {text-align: left; padding: 5px;}
+.c3table tr:nth-child(even) {background: #f7f7f7 !important;}
+.c3table .ellipsis {background: rgba(0, 0, 0, .01);}
+.c3table .index {background: rgba(161, 195, 209, 0.0); margin: 10px; font-weight: 600;}
 .c3table .head_cell {background: rgba(161, 195, 209, 0.75); font-weight: bold; text-align: center;}
 .c3table caption {color: rgb(250, 250, 250); background: rgba(30, 140, 200, 1); padding: 3px; white-space: nowrap; caption-side: top;}
 .c3table .cell_title {font-weight: bold;}
+.c3col_left { text-align: left !important; display: block;}
+.c3col_right { text-align: right !important; display: block;}
+.c3col_center { text-align: center !important; display: block;}
 </style>
-<div class="c3table">
+
 <table>
-<caption><span class="cell_title">Standard Nuclear</span><br><span class="cell_legend"></span></caption>
+
+<caption>
+<br><span class="cell_title">Standard Nuclear</span></br>
+</caption>
 <thead class="head_cell">
-<th>aa</th>
-<th>IUPAC code</th>
-<th>codons</th>
+<th>aa</th><th>IUPAC code</th><th>codons</th>
 </thead>
 <tbody>
-<tr>
-<td>Alanine</td>
-<td>A</td>
-<td>GCT,GCC,GCA,GCG</td>
-</tr>
-<tr>
-<td>Cysteine</td>
-<td>C</td>
-<td>TGT,TGC</td>
-</tr>
-<tr>
-<td>Aspartic Acid</td>
-<td>D</td>
-<td>GAT,GAC</td>
-</tr>
-<tr>
-<td>Glutamic Acid</td>
-<td>E</td>
-<td>GAA,GAG</td>
-</tr>
-<tr>
-<td>Phenylalanine</td>
-<td>F</td>
-<td>TTT,TTC</td>
-</tr>
-<tr>
-<td>Glycine</td>
-<td>G</td>
-<td>GGT,GGC,GGA,GGG</td>
-</tr>
-<tr>
-<td>Histidine</td>
-<td>H</td>
-<td>CAT,CAC</td>
-</tr>
-<tr>
-<td>Isoleucine</td>
-<td>I</td>
-<td>ATT,ATC,ATA</td>
-</tr>
-<tr>
-<td>Lysine</td>
-<td>K</td>
-<td>AAA,AAG</td>
-</tr>
-<tr>
-<td>Leucine</td>
-<td>L</td>
-<td>TTA,TTG,CTT,CTC,CTA,CTG</td>
-</tr>
-<tr>
-<td>Methionine</td>
-<td>M</td>
-<td>ATG</td>
-</tr>
-<tr>
-<td>Asparagine</td>
-<td>N</td>
-<td>AAT,AAC</td>
-</tr>
-<tr>
-<td>Proline</td>
-<td>P</td>
-<td>CCT,CCC,CCA,CCG</td>
-</tr>
-<tr>
-<td>Glutamine</td>
-<td>Q</td>
-<td>CAA,CAG</td>
-</tr>
-<tr>
-<td>Arginine</td>
-<td>R</td>
-<td>CGT,CGC,CGA,CGG,AGA,AGG</td>
-</tr>
-<tr>
-<td>Serine</td>
-<td>S</td>
-<td>TCT,TCC,TCA,TCG,AGT,AGC</td>
-</tr>
-<tr>
-<td>Threonine</td>
-<td>T</td>
-<td>ACT,ACC,ACA,ACG</td>
-</tr>
-<tr>
-<td>Valine</td>
-<td>V</td>
-<td>GTT,GTC,GTA,GTG</td>
-</tr>
-<tr>
-<td>Tryptophan</td>
-<td>W</td>
-<td>TGG</td>
-</tr>
-<tr>
-<td>Tyrosine</td>
-<td>Y</td>
-<td>TAT,TAC</td>
-</tr>
-<tr>
-<td>STOP</td>
-<td>*</td>
-<td>TAA,TAG,TGA</td>
-</tr>
+<tr><td><span class="c3col_left">Alanine</span></td><td><span class="c3col_left">A</span></td><td><span class="c3col_left">GCT,GCC,GCA,GCG</span></td></tr>
+<tr><td><span class="c3col_left">Cysteine</span></td><td><span class="c3col_left">C</span></td><td><span class="c3col_left">TGT,TGC</span></td></tr>
+<tr><td><span class="c3col_left">Aspartic Acid</span></td><td><span class="c3col_left">D</span></td><td><span class="c3col_left">GAT,GAC</span></td></tr>
+<tr><td><span class="c3col_left">Glutamic Acid</span></td><td><span class="c3col_left">E</span></td><td><span class="c3col_left">GAA,GAG</span></td></tr>
+<tr><td><span class="c3col_left">Phenylalanine</span></td><td><span class="c3col_left">F</span></td><td><span class="c3col_left">TTT,TTC</span></td></tr>
+<tr><td><span class="c3col_left">Glycine</span></td><td><span class="c3col_left">G</span></td><td><span class="c3col_left">GGT,GGC,GGA,GGG</span></td></tr>
+<tr><td><span class="c3col_left">Histidine</span></td><td><span class="c3col_left">H</span></td><td><span class="c3col_left">CAT,CAC</span></td></tr>
+<tr><td><span class="c3col_left">Isoleucine</span></td><td><span class="c3col_left">I</span></td><td><span class="c3col_left">ATT,ATC,ATA</span></td></tr>
+<tr><td><span class="c3col_left">Lysine</span></td><td><span class="c3col_left">K</span></td><td><span class="c3col_left">AAA,AAG</span></td></tr>
+<tr><td><span class="c3col_left">Leucine</span></td><td><span class="c3col_left">L</span></td><td><span class="c3col_left">TTA,TTG,CTT,CTC,CTA,CTG</span></td></tr>
+<tr><td><span class="c3col_left">Methionine</span></td><td><span class="c3col_left">M</span></td><td><span class="c3col_left">ATG</span></td></tr>
+<tr><td><span class="c3col_left">Asparagine</span></td><td><span class="c3col_left">N</span></td><td><span class="c3col_left">AAT,AAC</span></td></tr>
+<tr><td><span class="c3col_left">Proline</span></td><td><span class="c3col_left">P</span></td><td><span class="c3col_left">CCT,CCC,CCA,CCG</span></td></tr>
+<tr><td><span class="c3col_left">Glutamine</span></td><td><span class="c3col_left">Q</span></td><td><span class="c3col_left">CAA,CAG</span></td></tr>
+<tr><td><span class="c3col_left">Arginine</span></td><td><span class="c3col_left">R</span></td><td><span class="c3col_left">CGT,CGC,CGA,CGG,AGA,AGG</span></td></tr>
+<tr><td><span class="c3col_left">Serine</span></td><td><span class="c3col_left">S</span></td><td><span class="c3col_left">TCT,TCC,TCA,TCG,AGT,AGC</span></td></tr>
+<tr><td><span class="c3col_left">Threonine</span></td><td><span class="c3col_left">T</span></td><td><span class="c3col_left">ACT,ACC,ACA,ACG</span></td></tr>
+<tr><td><span class="c3col_left">Valine</span></td><td><span class="c3col_left">V</span></td><td><span class="c3col_left">GTT,GTC,GTA,GTG</span></td></tr>
+<tr><td><span class="c3col_left">Tryptophan</span></td><td><span class="c3col_left">W</span></td><td><span class="c3col_left">TGG</span></td></tr>
+<tr><td><span class="c3col_left">Tyrosine</span></td><td><span class="c3col_left">Y</span></td><td><span class="c3col_left">TAT,TAC</span></td></tr>
+<tr><td><span class="c3col_left">STOP</span></td><td><span class="c3col_left">*</span></td><td><span class="c3col_left">TAA,TAG,TGA</span></td></tr>
 </tbody>
 </table>
 
@@ -575,131 +457,55 @@
 </div>
 </div>
 <div class="cell_output docutils container">
-<div class="output text_html"><style>
+<div class="output text_html">
+<div class="c3table">
+
+<style>
 .c3table table {margin: 10px 0;}
 .c3table tr:last-child {border-bottom: 1px solid #000;} 
-.c3table tr > th {text-align: center !important; padding: 0 5px;}
-.c3table tr > td {text-align: right !important; padding: 5px;}
-.c3table tr:nth-child(even) {background: #f7f7f7;}
-.c3table .index {background: rgba(161, 195, 209, 0.25); font-weight: 600;}
+.c3table tr > th {text-align: left; padding: 0 5px;}
+.c3table tr > td {text-align: left; padding: 5px;}
+.c3table tr:nth-child(even) {background: #f7f7f7 !important;}
+.c3table .ellipsis {background: rgba(0, 0, 0, .01);}
+.c3table .index {background: rgba(161, 195, 209, 0.0); margin: 10px; font-weight: 600;}
 .c3table .head_cell {background: rgba(161, 195, 209, 0.75); font-weight: bold; text-align: center;}
 .c3table caption {color: rgb(250, 250, 250); background: rgba(30, 140, 200, 1); padding: 3px; white-space: nowrap; caption-side: top;}
 .c3table .cell_title {font-weight: bold;}
+.c3col_left { text-align: left !important; display: block;}
+.c3col_right { text-align: right !important; display: block;}
+.c3col_center { text-align: center !important; display: block;}
 </style>
-<div class="c3table">
+
 <table>
-<caption><span class="cell_title">Standard Nuclear</span><br><span class="cell_legend"></span></caption>
+
+<caption>
+<br><span class="cell_title">Standard Nuclear</span></br>
+</caption>
 <thead class="head_cell">
-<th>aa</th>
-<th>IUPAC code</th>
-<th>codons</th>
+<th>aa</th><th>IUPAC code</th><th>codons</th>
 </thead>
 <tbody>
-<tr>
-<td>Alanine</td>
-<td>A</td>
-<td>GCT,GCC,GCA,GCG</td>
-</tr>
-<tr>
-<td>Cysteine</td>
-<td>C</td>
-<td>TGT,TGC</td>
-</tr>
-<tr>
-<td>Aspartic Acid</td>
-<td>D</td>
-<td>GAT,GAC</td>
-</tr>
-<tr>
-<td>Glutamic Acid</td>
-<td>E</td>
-<td>GAA,GAG</td>
-</tr>
-<tr>
-<td>Phenylalanine</td>
-<td>F</td>
-<td>TTT,TTC</td>
-</tr>
-<tr>
-<td>Glycine</td>
-<td>G</td>
-<td>GGT,GGC,GGA,GGG</td>
-</tr>
-<tr>
-<td>Histidine</td>
-<td>H</td>
-<td>CAT,CAC</td>
-</tr>
-<tr>
-<td>Isoleucine</td>
-<td>I</td>
-<td>ATT,ATC,ATA</td>
-</tr>
-<tr>
-<td>Lysine</td>
-<td>K</td>
-<td>AAA,AAG</td>
-</tr>
-<tr>
-<td>Leucine</td>
-<td>L</td>
-<td>TTA,TTG,CTT,CTC,CTA,CTG</td>
-</tr>
-<tr>
-<td>Methionine</td>
-<td>M</td>
-<td>ATG</td>
-</tr>
-<tr>
-<td>Asparagine</td>
-<td>N</td>
-<td>AAT,AAC</td>
-</tr>
-<tr>
-<td>Proline</td>
-<td>P</td>
-<td>CCT,CCC,CCA,CCG</td>
-</tr>
-<tr>
-<td>Glutamine</td>
-<td>Q</td>
-<td>CAA,CAG</td>
-</tr>
-<tr>
-<td>Arginine</td>
-<td>R</td>
-<td>CGT,CGC,CGA,CGG,AGA,AGG</td>
-</tr>
-<tr>
-<td>Serine</td>
-<td>S</td>
-<td>TCT,TCC,TCA,TCG,AGT,AGC</td>
-</tr>
-<tr>
-<td>Threonine</td>
-<td>T</td>
-<td>ACT,ACC,ACA,ACG</td>
-</tr>
-<tr>
-<td>Valine</td>
-<td>V</td>
-<td>GTT,GTC,GTA,GTG</td>
-</tr>
-<tr>
-<td>Tryptophan</td>
-<td>W</td>
-<td>TGG</td>
-</tr>
-<tr>
-<td>Tyrosine</td>
-<td>Y</td>
-<td>TAT,TAC</td>
-</tr>
-<tr>
-<td>STOP</td>
-<td>*</td>
-<td>TAA,TAG,TGA</td>
-</tr>
+<tr><td><span class="c3col_left">Alanine</span></td><td><span class="c3col_left">A</span></td><td><span class="c3col_left">GCT,GCC,GCA,GCG</span></td></tr>
+<tr><td><span class="c3col_left">Cysteine</span></td><td><span class="c3col_left">C</span></td><td><span class="c3col_left">TGT,TGC</span></td></tr>
+<tr><td><span class="c3col_left">Aspartic Acid</span></td><td><span class="c3col_left">D</span></td><td><span class="c3col_left">GAT,GAC</span></td></tr>
+<tr><td><span class="c3col_left">Glutamic Acid</span></td><td><span class="c3col_left">E</span></td><td><span class="c3col_left">GAA,GAG</span></td></tr>
+<tr><td><span class="c3col_left">Phenylalanine</span></td><td><span class="c3col_left">F</span></td><td><span class="c3col_left">TTT,TTC</span></td></tr>
+<tr><td><span class="c3col_left">Glycine</span></td><td><span class="c3col_left">G</span></td><td><span class="c3col_left">GGT,GGC,GGA,GGG</span></td></tr>
+<tr><td><span class="c3col_left">Histidine</span></td><td><span class="c3col_left">H</span></td><td><span class="c3col_left">CAT,CAC</span></td></tr>
+<tr><td><span class="c3col_left">Isoleucine</span></td><td><span class="c3col_left">I</span></td><td><span class="c3col_left">ATT,ATC,ATA</span></td></tr>
+<tr><td><span class="c3col_left">Lysine</span></td><td><span class="c3col_left">K</span></td><td><span class="c3col_left">AAA,AAG</span></td></tr>
+<tr><td><span class="c3col_left">Leucine</span></td><td><span class="c3col_left">L</span></td><td><span class="c3col_left">TTA,TTG,CTT,CTC,CTA,CTG</span></td></tr>
+<tr><td><span class="c3col_left">Methionine</span></td><td><span class="c3col_left">M</span></td><td><span class="c3col_left">ATG</span></td></tr>
+<tr><td><span class="c3col_left">Asparagine</span></td><td><span class="c3col_left">N</span></td><td><span class="c3col_left">AAT,AAC</span></td></tr>
+<tr><td><span class="c3col_left">Proline</span></td><td><span class="c3col_left">P</span></td><td><span class="c3col_left">CCT,CCC,CCA,CCG</span></td></tr>
+<tr><td><span class="c3col_left">Glutamine</span></td><td><span class="c3col_left">Q</span></td><td><span class="c3col_left">CAA,CAG</span></td></tr>
+<tr><td><span class="c3col_left">Arginine</span></td><td><span class="c3col_left">R</span></td><td><span class="c3col_left">CGT,CGC,CGA,CGG,AGA,AGG</span></td></tr>
+<tr><td><span class="c3col_left">Serine</span></td><td><span class="c3col_left">S</span></td><td><span class="c3col_left">TCT,TCC,TCA,TCG,AGT,AGC</span></td></tr>
+<tr><td><span class="c3col_left">Threonine</span></td><td><span class="c3col_left">T</span></td><td><span class="c3col_left">ACT,ACC,ACA,ACG</span></td></tr>
+<tr><td><span class="c3col_left">Valine</span></td><td><span class="c3col_left">V</span></td><td><span class="c3col_left">GTT,GTC,GTA,GTG</span></td></tr>
+<tr><td><span class="c3col_left">Tryptophan</span></td><td><span class="c3col_left">W</span></td><td><span class="c3col_left">TGG</span></td></tr>
+<tr><td><span class="c3col_left">Tyrosine</span></td><td><span class="c3col_left">Y</span></td><td><span class="c3col_left">TAT,TAC</span></td></tr>
+<tr><td><span class="c3col_left">STOP</span></td><td><span class="c3col_left">*</span></td><td><span class="c3col_left">TAA,TAG,TGA</span></td></tr>
 </tbody>
 </table>
 <p>
