--- a/cogent3/moltype.html
+++ b/cogent3/moltype.html
@@ -229,61 +229,41 @@
 </div>
 </div>
 <div class="cell_output docutils container">
-<div class="output text_html"><style>
+<div class="output text_html">
+<div class="c3table">
+
+<style>
 .c3table table {margin: 10px 0;}
 .c3table tr:last-child {border-bottom: 1px solid #000;} 
-.c3table tr > th {text-align: center !important; padding: 0 5px;}
-.c3table tr > td {text-align: right !important; padding: 5px;}
-.c3table tr:nth-child(even) {background: #f7f7f7;}
-.c3table .index {background: rgba(161, 195, 209, 0.25); font-weight: 600;}
+.c3table tr > th {text-align: left; padding: 0 5px;}
+.c3table tr > td {text-align: left; padding: 5px;}
+.c3table tr:nth-child(even) {background: #f7f7f7 !important;}
+.c3table .ellipsis {background: rgba(0, 0, 0, .01);}
+.c3table .index {background: rgba(161, 195, 209, 0.25); margin: 10px; font-weight: 600;}
 .c3table .head_cell {background: rgba(161, 195, 209, 0.75); font-weight: bold; text-align: center;}
 .c3table caption {color: rgb(250, 250, 250); background: rgba(30, 140, 200, 1); padding: 3px; white-space: nowrap; caption-side: top;}
 .c3table .cell_title {font-weight: bold;}
+.c3col_left { text-align: left !important; display: block;}
+.c3col_right { text-align: right !important; display: block;}
+.c3col_center { text-align: center !important; display: block;}
 </style>
-<div class="c3table">
+
 <table>
-<caption><span class="cell_title">Specify a moltype by the Abbreviation (case insensitive).</span><br><span class="cell_legend"></span></caption>
+
+<caption>
+<br><span class="cell_title">Specify a moltype by the Abbreviation (case insensitive).</span></br>
+</caption>
 <thead class="head_cell">
-<th>Abbreviation</th>
-<th>Number of states</th>
-<th>Moltype</th>
+<th>Abbreviation</th><th>Number of states</th><th>Moltype</th>
 </thead>
 <tbody>
-<tr>
-<td class="index">'ab'</td>
-<td>2</td>
-<td>MolType(('a', 'b'))</td>
-</tr>
-<tr>
-<td class="index">'dna'</td>
-<td>4</td>
-<td>MolType(('T', 'C', 'A', 'G'))</td>
-</tr>
-<tr>
-<td class="index">'rna'</td>
-<td>4</td>
-<td>MolType(('U', 'C', 'A', 'G'))</td>
-</tr>
-<tr>
-<td class="index">'protein'</td>
-<td>21</td>
-<td>MolType(('A', 'C', 'D', 'E', 'F', 'G', ...</td>
-</tr>
-<tr>
-<td class="index">'protein_with_stop'</td>
-<td>22</td>
-<td>MolType(('A', 'C', 'D', 'E', 'F', 'G', ...</td>
-</tr>
-<tr>
-<td class="index">'text'</td>
-<td>52</td>
-<td>MolType(('a', 'b', 'c', 'd', 'e', 'f', ...</td>
-</tr>
-<tr>
-<td class="index">'bytes'</td>
-<td>256</td>
-<td>MolType(('\x00', '\x01', '\x02', '\x03'...</td>
-</tr>
+<tr><td class="index"><span class="c3col_left">'ab'</span></td><td><span class="c3col_right">2</span></td><td><span class="c3col_left">MolType(('a', 'b'))</span></td></tr>
+<tr><td class="index"><span class="c3col_left">'dna'</span></td><td><span class="c3col_right">4</span></td><td><span class="c3col_left">MolType(('T', 'C', 'A', 'G'))</span></td></tr>
+<tr><td class="index"><span class="c3col_left">'rna'</span></td><td><span class="c3col_right">4</span></td><td><span class="c3col_left">MolType(('U', 'C', 'A', 'G'))</span></td></tr>
+<tr><td class="index"><span class="c3col_left">'protein'</span></td><td><span class="c3col_right">21</span></td><td><span class="c3col_left">MolType(('A', 'C', 'D', 'E', 'F', 'G', ...</span></td></tr>
+<tr><td class="index"><span class="c3col_left">'protein_with_stop'</span></td><td><span class="c3col_right">22</span></td><td><span class="c3col_left">MolType(('A', 'C', 'D', 'E', 'F', 'G', ...</span></td></tr>
+<tr><td class="index"><span class="c3col_left">'text'</span></td><td><span class="c3col_right">52</span></td><td><span class="c3col_left">MolType(('a', 'b', 'c', 'd', 'e', 'f', ...</span></td></tr>
+<tr><td class="index"><span class="c3col_left">'bytes'</span></td><td><span class="c3col_right">256</span></td><td><span class="c3col_left">MolType(('\x00', '\x01', '\x02', '\x03'...</span></td></tr>
 </tbody>
 </table>
 <p>
