deploy: 20840e518ac5621db889b1592f4462ac80b7240b

--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -202,7 +202,7 @@
 <ul class="simple">
 <li><p>Sheng Koh for his assistance in improving the Sphinx theme template and CSS to enhance the reading experience.</p></li>
 <li><p>Brendan Beaton for fixing a mismatch between code and corresponding text description.</p></li>
-<li><p>Nigel Heng for identifying a bug in Plotly <span class="incremental">imshow()</span>.</p></li>
+<li><p>Nigel Heng for identifying a bug in Plotly <span class="incremental">imshow()</span> and an error in the description of using the Kolmogorov-Smirnov test for testing for normality.</p></li>
 <li><p>Amber Condell for reporting dead links.</p></li>
 <li><p>Amber Condell, Sean Broderick and Brendan Beaton for identifying issues that needed better explanations.</p></li>
 <li><p>Jesse Wallace for suggesting assorted improvements and fixes.</p></li>
