deploy: 0ae7a2d268e546eb1565c0d8deb36dd7dace7e20

--- a/cogent3/genetic_codes.html
+++ b/cogent3/genetic_codes.html
@@ -242,7 +242,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Specify a genetic code using either 'Name' or Code ID (as an integer or string)</span></br>
+<span class="cell_title">Specify a genetic code using either 'Name' or Code ID (as an integer or string)</span>
 </caption>
 <thead class="head_cell">
 <th>Code ID</th><th>Name</th>
@@ -304,7 +304,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Standard Nuclear</span></br>
+<span class="cell_title">Standard Nuclear</span>
 </caption>
 <thead class="head_cell">
 <th>aa</th><th>IUPAC code</th><th>codons</th>
@@ -479,7 +479,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Standard Nuclear</span></br>
+<span class="cell_title">Standard Nuclear</span>
 </caption>
 <thead class="head_cell">
 <th>aa</th><th>IUPAC code</th><th>codons</th>
