--- a/cogent3/moltype.html
+++ b/cogent3/moltype.html
@@ -251,7 +251,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Specify a moltype by the Abbreviation (case insensitive).</span></br>
+<span class="cell_title">Specify a moltype by the Abbreviation (case insensitive).</span>
 </caption>
 <thead class="head_cell">
 <th>Abbreviation</th><th>Number of states</th><th>Moltype</th>
