--- a/cogent3/tables.html
+++ b/cogent3/tables.html
@@ -821,7 +821,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Observed</span></br>
+<span class="cell_title">Observed</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
@@ -856,7 +856,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Expected</span></br>
+<span class="cell_title">Expected</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
@@ -891,7 +891,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Residuals</span></br>
+<span class="cell_title">Residuals</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
@@ -936,7 +936,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Chisq-test for independence</span></br>
+<span class="cell_title">Chisq-test for independence</span>
 </caption>
 <thead class="head_cell">
 <th>chisq</th><th>df</th><th>pvalue</th>
@@ -969,7 +969,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Observed</span></br>
+<span class="cell_title">Observed</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
@@ -1004,7 +1004,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Expected</span></br>
+<span class="cell_title">Expected</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
@@ -1039,7 +1039,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Residuals</span></br>
+<span class="cell_title">Residuals</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
@@ -1140,7 +1140,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Observed</span></br>
+<span class="cell_title">Observed</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
@@ -1175,7 +1175,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Expected</span></br>
+<span class="cell_title">Expected</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
@@ -1210,7 +1210,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Residuals</span></br>
+<span class="cell_title">Residuals</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>A</th><th>C</th><th>G</th><th>T</th>
