--- a/seqcomp/pssm.html
+++ b/seqcomp/pssm.html
@@ -257,7 +257,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">PPM --</span></br> <span class="cell_legend">Position specific probability matrix</span>
+<span class="cell_title">PPM --</span> <br><span class="cell_legend">Position specific probability matrix</span></br>
 </caption>
 <thead class="head_cell">
 <th>Base \ Position</th><th>0</th><th>1</th><th>3</th>
@@ -352,7 +352,7 @@ for seq_index in sequence
 <table>
 
 <caption>
-<br><span class="cell_title">PPM</span></br> <span class="cell_legend">Position specific probability matrix after adding 0.5 to the PWM cells</span>
+<span class="cell_title">PPM</span> <br><span class="cell_legend">Position specific probability matrix after adding 0.5 to the PWM cells</span></br>
 </caption>
 <thead class="head_cell">
 <th>Base \ Position</th><th>0</th><th>1</th><th>2</th><th>3</th>
