--- a/seqcomp/related_by_function.html
+++ b/seqcomp/related_by_function.html
@@ -353,7 +353,7 @@ TYHBM &lt;-- the IUPAC consensus
 <table>
 
 <caption>
-<br><span class="cell_title">PWM</span></br> <span class="cell_legend">position specific weights matrix</span>
+<span class="cell_title">PWM</span> <br><span class="cell_legend">position specific weights matrix</span></br>
 </caption>
 <thead class="head_cell">
 <th>Base \ Position</th><th>0</th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th>
