--- a/molevol/substitution_models.html
+++ b/molevol/substitution_models.html
@@ -277,7 +277,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">Q</span></br>
+<span class="cell_title">Q</span>
 </caption>
 <thead class="head_cell">
 <th></th><th>T</th><th>C</th><th>A</th><th>G</th>
@@ -317,7 +317,7 @@
 <table>
 
 <caption>
-<br><span class="cell_title">π</span></br>
+<span class="cell_title">π</span>
 </caption>
 <thead class="head_cell">
 <th>T</th><th>C</th><th>A</th><th>G</th>
