--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Index &mdash; Topics in Bioinformatics 2021.07.26 documentation</title>
+  <title>Index &mdash; Topics in Bioinformatics 2021.08.01 documentation</title>
   
 
   
@@ -982,14 +982,21 @@
       <li><a href="python/dir_help.html#index-1">help()</a>
 </li>
       <li>
+    hints
+
+      <ul>
+        <li><a href="python/dir_help.html#index-2">type</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     How to ask for help related to these notes
 
       <ul>
         <li><a href="contribute.html#index-0">screencasts</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="seqcomp/statistics.html#index-2">hypothesis testing</a>
 
       <ul>
@@ -2151,6 +2158,8 @@
       <ul>
         <li><a href="python/sets.html#index-0">frozenset</a>
 </li>
+        <li><a href="python/dir_help.html#index-2">hints</a>
+</li>
         <li><a href="python/sets.html#index-0">set</a>
 </li>
       </ul></li>
@@ -2160,6 +2169,8 @@
         <li><a href="python/types.html#index-9">types</a>
 </li>
       </ul></li>
+      <li><a href="python/dir_help.html#index-3">type hints</a>
+</li>
       <li>
     type()
 
