deploy: f7e7686c090bfdf81506d5569f8e0621b7564ba8

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Index &mdash; Topics in Bioinformatics 2021.08.12 documentation</title>
+  <title>Index &mdash; Topics in Bioinformatics 2021.08.14 documentation</title>
   
 
   
@@ -1317,7 +1317,11 @@
 </li>
       </ul></li>
       <li><a href="python/logic.html#index-3">looping</a>
+
+      <ul>
+        <li><a href="python/more_looping.html#index-3">range</a>
 </li>
+      </ul></li>
       <li>
     loops
 
@@ -1856,6 +1860,13 @@
 
       <ul>
         <li><a href="python/misc.html#index-0">str</a>
+</li>
+      </ul></li>
+      <li>
+    range
+
+      <ul>
+        <li><a href="python/more_looping.html#index-3">looping</a>
 </li>
       </ul></li>
       <li>
