--- a/genindex.html
+++ b/genindex.html
@@ -496,6 +496,10 @@
 </li>
         <li><a href="python/functions.html#index-1">functions</a>
 </li>
+        <li><a href="python/functions.html#index-2">range</a>
+</li>
+        <li><a href="python/functions.html#index-2">sum</a>
+</li>
       </ul></li>
       <li>
     bytes
@@ -641,7 +645,7 @@
     concatenating
 
       <ul>
-        <li><a href="python/functions.html#index-4">string</a>
+        <li><a href="python/functions.html#index-5">string</a>
 </li>
       </ul></li>
       <li>
@@ -1082,7 +1086,7 @@
         <li><a href="python/logic.html#index-2">conditionals</a>
 </li>
       </ul></li>
-      <li><a href="python/functions.html#index-5">immutable</a>
+      <li><a href="python/functions.html#index-6">immutable</a>
 </li>
       <li><a href="python/import.html#index-0">import</a>
 </li>
@@ -1136,7 +1140,7 @@
         <li><a href="seqcomp/pairwise_alignment.html#index-0">indel</a>
 </li>
       </ul></li>
-      <li><a href="python/functions.html#index-2">instance</a>
+      <li><a href="python/functions.html#index-3">instance</a>
 </li>
       <li>
     int
@@ -1454,7 +1458,7 @@
       </ul></li>
       <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-14">[2]</a>
 </li>
-      <li><a href="python/functions.html#index-3">methods</a>
+      <li><a href="python/functions.html#index-4">methods</a>
 </li>
       <li>
     minus
@@ -1502,7 +1506,7 @@
         <li><a href="python/start.html#index-4">maths</a>
 </li>
       </ul></li>
-      <li><a href="python/functions.html#index-5">mutable</a>
+      <li><a href="python/functions.html#index-6">mutable</a>
 </li>
       <li>
     mutation
@@ -1866,6 +1870,8 @@
     range
 
       <ul>
+        <li><a href="python/functions.html#index-2">builtin</a>
+</li>
         <li><a href="python/more_looping.html#index-3">looping</a>
 </li>
       </ul></li>
@@ -1899,6 +1905,8 @@
         <li><a href="version_control/index.html#index-13">version control</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     repository
 
@@ -1906,8 +1914,6 @@
         <li><a href="version_control/index.html#index-12">version control</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     required arguments
 
@@ -2144,7 +2150,7 @@
       <ul>
         <li><a href="python/misc.html#index-1">bytes str</a>
 </li>
-        <li><a href="python/functions.html#index-4">concatenating</a>
+        <li><a href="python/functions.html#index-5">concatenating</a>
 </li>
         <li><a href="python/misc.html#index-1">encode decode</a>
 </li>
@@ -2191,6 +2197,13 @@
 
       <ul>
         <li><a href="python/start.html#index-3">maths</a>
+</li>
+      </ul></li>
+      <li>
+    sum
+
+      <ul>
+        <li><a href="python/functions.html#index-2">builtin</a>
 </li>
       </ul></li>
       <li>
