deploy: b048b4181230788bd1997f5bc5a766a8a5bc965d

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Index &mdash; Topics in Bioinformatics 2021.08.14 documentation</title>
+  <title>Index &mdash; Topics in Bioinformatics 2021.08.15 documentation</title>
   
 
   
@@ -928,6 +928,13 @@
 </li>
       </ul></li>
       <li>
+    fail
+
+      <ul>
+        <li><a href="testing/index.html#index-0">test</a>
+</li>
+      </ul></li>
+      <li>
     file path
 
       <ul>
@@ -965,6 +972,8 @@
         <li><a href="python/types.html#index-2">types</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     for
 
@@ -972,8 +981,6 @@
         <li><a href="python/logic.html#index-5">loops</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     format
 
@@ -1714,6 +1721,8 @@
       <ul>
         <li><a href="python/writing_functions.html#index-5">statement</a>
 </li>
+        <li><a href="testing/index.html#index-0">test</a>
+</li>
       </ul></li>
       <li>
     Paths to files and folders
@@ -2246,6 +2255,15 @@
         <li><a href="cogent3/tables.html#index-3">cogent3, load from file</a>
 </li>
       </ul></li>
+      <li>
+    test
+
+      <ul>
+        <li><a href="testing/index.html#index-0">fail</a>
+</li>
+        <li><a href="testing/index.html#index-0">pass</a>
+</li>
+      </ul></li>
       <li><a href="python/misc.html#index-3">testing</a>
 </li>
       <li>
@@ -2317,6 +2335,8 @@
       </ul></li>
       <li><a href="molevol/substitution_models.html#index-3">transition substitutions</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     transversion
 
@@ -2324,8 +2344,6 @@
         <li><a href="molevol/mutation.html#index-1">point mutation</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     True / False
 
