deploy: ca9b45eee4063d1407b851719bdde26a26c332e5

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Index &mdash; Topics in Bioinformatics 2021.08.16 documentation</title>
+  <title>Index &mdash; Topics in Bioinformatics 2021.08.17 documentation</title>
   
 
   
@@ -326,6 +326,13 @@
 </li>
       </ul></li>
       <li>
+    @
+
+      <ul>
+        <li><a href="python/numpy.html#index-13">operators</a>
+</li>
+      </ul></li>
+      <li>
     ^
 
       <ul>
@@ -376,7 +383,7 @@
     all
 
       <ul>
-        <li><a href="python/numpy.html#index-13">numpy</a>
+        <li><a href="python/numpy.html#index-14">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -390,7 +397,7 @@
     any
 
       <ul>
-        <li><a href="python/numpy.html#index-13">numpy</a>
+        <li><a href="python/numpy.html#index-14">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -408,7 +415,7 @@
     array comparisons
 
       <ul>
-        <li><a href="python/numpy.html#index-15">numpy</a>
+        <li><a href="python/numpy.html#index-16">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/import.html#index-2">as</a>
@@ -658,7 +665,7 @@
 </li>
         <li><a href="python/logic.html#index-2">if</a>
 </li>
-        <li><a href="python/numpy.html#index-13">numpy</a>
+        <li><a href="python/numpy.html#index-14">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -695,7 +702,7 @@
     count
 
       <ul>
-        <li><a href="python/numpy.html#index-16">numpy</a>
+        <li><a href="python/numpy.html#index-17">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1313,7 +1320,7 @@
     logical operations
 
       <ul>
-        <li><a href="python/numpy.html#index-15">numpy</a>
+        <li><a href="python/numpy.html#index-16">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1463,7 +1470,7 @@
         <li><a href="version_control/index.html#index-11">version control</a>
 </li>
       </ul></li>
-      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-14">[2]</a>
+      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-15">[2]</a>
 </li>
       <li><a href="python/functions.html#index-4">methods</a>
 </li>
@@ -1613,11 +1620,11 @@
       <ul>
         <li><a href="python/numpy.html#index-4">advanced indexing</a>, <a href="python/numpy.html#index-8">[1]</a>
 </li>
-        <li><a href="python/numpy.html#index-13">all</a>
+        <li><a href="python/numpy.html#index-14">all</a>
 </li>
-        <li><a href="python/numpy.html#index-13">any</a>
+        <li><a href="python/numpy.html#index-14">any</a>
 </li>
-        <li><a href="python/numpy.html#index-15">array comparisons</a>
+        <li><a href="python/numpy.html#index-16">array comparisons</a>
 </li>
         <li><a href="python/numpy.html#index-5">assignment</a>
 </li>
@@ -1629,9 +1636,9 @@
 </li>
         <li><a href="python/numpy.html#index-8">boolean indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-13">conditionals</a>
+        <li><a href="python/numpy.html#index-14">conditionals</a>
 </li>
-        <li><a href="python/numpy.html#index-16">count</a>
+        <li><a href="python/numpy.html#index-17">count</a>
 </li>
         <li><a href="python/numpy.html#index-6">evaluation</a>
 </li>
@@ -1639,7 +1646,7 @@
 </li>
         <li><a href="python/numpy.html#index-8">integer indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-15">logical operations</a>
+        <li><a href="python/numpy.html#index-16">logical operations</a>
 </li>
         <li><a href="python/numpy.html#index-1">matrix</a>
 </li>
@@ -1689,6 +1696,8 @@
         <li><a href="python/operators.html#index-0">&gt;</a>
 </li>
         <li><a href="python/operators.html#index-0">&gt;=</a>
+</li>
+        <li><a href="python/numpy.html#index-13">@</a>
 </li>
         <li><a href="python/operators.html#index-0">is</a>
 </li>
