--- a/genindex.html
+++ b/genindex.html
@@ -288,7 +288,7 @@
         <li><a href="version_control/index.html#index-7">version control</a>
 </li>
       </ul></li>
-      <li><a href="python/import.html#index-3">3rd party libraries</a>
+      <li><a href="python/import.html#index-4">3rd party libraries</a>
 </li>
       <li>
     &lt;
@@ -418,7 +418,7 @@
         <li><a href="python/numpy.html#index-16">numpy</a>
 </li>
       </ul></li>
-      <li><a href="python/import.html#index-2">as</a>
+      <li><a href="python/import.html#index-3">as</a>
 
       <ul>
         <li><a href="python/iterators.html#index-3">keyword</a>
@@ -1312,10 +1312,19 @@
         <li><a href="version_control/index.html#index-9">version control</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="seqcomp/pssm.html#index-1">log-odds ratios</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    log2
+
+      <ul>
+        <li><a href="python/import.html#index-2">maths</a>
+</li>
+        <li><a href="seqcomp/information.html#index-0">maths numpy</a>
+</li>
+      </ul></li>
       <li>
     logical operations
 
@@ -1418,11 +1427,15 @@
 </li>
         <li><a href="python/start.html#index-5">integer divide</a>
 </li>
+        <li><a href="python/import.html#index-2">log2</a>
+</li>
         <li><a href="python/start.html#index-3">minus</a>
 </li>
         <li><a href="python/start.html#index-6">modulo operator</a>
 </li>
         <li><a href="python/start.html#index-4">multiply</a>
+</li>
+        <li><a href="seqcomp/information.html#index-0">numpy, log2</a>
 </li>
         <li><a href="python/start.html#index-2">plus</a>
 </li>
@@ -1645,6 +1658,8 @@
         <li><a href="python/numpy.html#index-3">indexing</a>
 </li>
         <li><a href="python/numpy.html#index-8">integer indexing</a>
+</li>
+        <li><a href="seqcomp/information.html#index-0">log2 maths</a>
 </li>
         <li><a href="python/numpy.html#index-16">logical operations</a>
 </li>
@@ -2296,7 +2311,7 @@
         <li><a href="molevol/max_likelihood.html#index-0">screencasts</a>
 </li>
       </ul></li>
-      <li><a href="python/import.html#index-3">third party libraries</a>
+      <li><a href="python/import.html#index-4">third party libraries</a>
 </li>
       <li><a href="molevol/substitution_models.html#index-2">time-reversible</a>
 </li>
